# sql-agent-demo

./: .gitignore  README.md  auth.py  graph.py  init_db.py  langgraph.json  pyproject.toml
agent-chat-ui/: package-lock.json  package.json
agent-chat-ui/apps/web/: package-lock.json
agent-chat-ui/apps/web/src/app/: layout.tsx
agent-chat-ui/apps/web/src/components/thread/: index.tsx
agent-chat-ui/apps/web/src/providers/: Thread.tsx
data/: components.csv  laptop_components.csv  laptops.csv
db/: schema.py
tools/: sql_tool.py
