[project]
name = "sql-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.2",
    "langchain-core>=1.2.6",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "langgraph-cli[inmem]>=0.4.11",
    "openai>=2.14.0",
    "pandas>=2.3.3",
]
